--- a/index.html
+++ b/index.html
@@ -1,84 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Grievance Box</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-      font-family: sans-serif;
-      background-color: #f4f4f4;
-      padding: 2rem;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    h1 {
-      color: #333;
-    }
-
-    form {
-      background: white;
-      padding: 2rem;
-      border-radius: 10px;
-      max-width: 400px;
-      width: 100%;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-    }
-
-    textarea, input[type="email"] {
-      width: 100%;
-      padding: 0.8rem;
-      margin: 0.5rem 0;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      resize: vertical;
-    }
-
-    button {
-      background: #007BFF;
-      color: white;
-      padding: 0.8rem 1.2rem;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      width: 100%;
-      font-size: 1rem;
-    }
-
-    button:hover {
-      background: #0056b3;
-    }
-
-    .note {
-      font-size: 0.8rem;
-      color: #666;
-      margin-top: 1rem;
-      text-align: center;
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <title>The Complaint Dept</title>
 </head>
 <body>
-  <h1>Leave Your Grievance</h1>
-  <form action="https://formsubmit.co/karinag5544@gmail.com" method="POST">
-    <!-- Hidden field to disable CAPTCHA (optional) -->
-    <input type="hidden" name="_captcha" value="false">
 
-    <!-- Optional email subject -->
-    <input type="hidden" name="_subject" value="New Grievance Submitted!">
-
-    <label for="email">Your Email (optional):</label>
-    <input type="email" name="email" placeholder="you@example.com">
-
-    <label for="message">Your Grievance:</label>
-    <textarea name="message" rows="6" placeholder="Say what you need to say..." required></textarea>
-
-    <button type="submit">Submit Grievance</button>
-  </form>
-
-  <div class="note">
-    Submissions are anonymous if you leave the email field blank.
-  </div>
 </body>
 </html>
