added a title and form field

--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> <!-- Page is in English -->
 <head>
-  <meta charset="UTF-8" />
-  <title>The Complaint Dept</title>
+  <meta charset="UTF-8" /> <!-- Use UTF-8 to display all characters correctly -->
+
+  <title>The Complaint Dept</title> <!-- This changes the tab name-->
+
+  <h1>The Complaint Dept</h1> <!-- This adds a title-->
+
+    <form action="https://formsubmit.co/karinag5544@gmail.com" method="POST">
+    <!-- Form fields will go here -->
+  </form>
+
 </head>
 <body>
 
